syntax = "proto3";
package axelar.tss.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/tss/types";

import "gogoproto/gogo.proto";
import "axelar/tss/exported/v1beta1/types.proto";

// KeyInfo holds information about a key
message KeyInfo {
  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/tss/exported.KeyID"
  ];
  tss.exported.v1beta1.KeyRole key_role = 2;
  tss.exported.v1beta1.KeyType key_type = 3;
}
